--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,17 +37,17 @@ dependencies:
   flutter_hooks: ^0.17.0
 
   # To use Firebase
-  firebase_core: ^1.3.0
-  firebase_auth: ^1.4.1
-  cloud_firestore: ^2.2.2
-  firebase_storage: ^8.1.3
-  firebase_crashlytics: ^2.0.6
-  firebase_analytics: ^8.1.2
-  firebase_performance: ^0.7.0+5
-  firebase_dynamic_links: ^2.0.6
-  firebase_messaging: ^10.0.2
-  cloud_functions: ^1.1.2
-  firebase_remote_config: ^0.10.0+2
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
+  cloud_firestore: ^3.1.0
+  firebase_storage: ^10.1.0
+  firebase_crashlytics: ^2.3.0
+  firebase_analytics: ^8.3.4
+  firebase_performance: ^0.7.1+4
+  firebase_dynamic_links: ^3.0.1
+  firebase_messaging: ^11.1.0
+  cloud_functions: ^3.1.1
+  firebase_remote_config: ^0.11.0+2
 
   # For lint
   pedantic_mono: ^1.12.1
@@ -59,8 +59,8 @@ dependencies:
   rflutter_alert: ^2.0.2
   flutter_signin_button: ^2.0.0
   package_info_plus: ^1.1.0
-  photo_view: ^0.11.1
-  image_picker: ^0.8.1+1
+  photo_view: ^0.12.0
+  image_picker: ^0.8.4+4
   image_cropper: ^1.4.1
   flutter_image_compress: ^1.0.0
   circular_menu: ^1.2.2
@@ -89,7 +89,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.0
 
   # For Splash Screen
-  flutter_native_splash: ^1.2.0
+  flutter_native_splash: ^1.3.1
 
 flutter_icons:
   android: true
@@ -100,7 +100,7 @@ flutter_icons:
 
 flutter_native_splash:
   image: assets/images/icon_splash_screen.png
-  color: "FFCC00"
+  color: "#FFCC00"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pu b/pubspec
