--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -190,6 +190,7 @@ flavorizr:
     - ios:schema
     - ios:icons
     - ios:plist
+    - ios:launchScreen
     - google:firebase
     - assets:clean
     - ide:config
