--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -22,3 +22,43 @@ jobs:
  
       - name: flutter pub get
         run: flutter pub get 
+
+      - name: copy google-service
+        env:
+            ANDROID_GOOGLE_SERVICE_DEVELOPMENT: ${{ secrets.ANDROID_GOOGLE_SERVICE_DEVELOPMENT }}
+            ANDROID_GOOGLE_SERVICE_PRODUCTION: ${{ secrets.ANDROID_GOOGLE_SERVICE_PRODUCTION }}
+            IOS_GOOGLE_SERVICE_DEVELOPMENT: ${{ secrets.IOS_GOOGLE_SERVICE_DEVELOPMENT }}
+            IOS_GOOGLE_SERVICE_PRODUCTION: ${{ secrets.IOS_GOOGLE_SERVICE_PRODUCTION }}
+        run: |
+            echo $ANDROID_GOOGLE_SERVICE_DEVELOPMENT | base64 --decode > ./firbase/development/google-services.json
+            echo $ANDROID_GOOGLE_SERVICE_PRODUCTION | base64 --decode > ./firbase/production/google-services.json
+            echo $IOS_GOOGLE_SERVICE_DEVELOPMENT | base64 --decode > ./firbase/development/GoogleService-Info.plist
+            echo $IOS_GOOGLE_SERVICE_PRODUCTION | base64 --decode > ./firbase/production/GoogleService-Info.plist
+
+      - name: copy android key.jks
+        env:
+            ANDROID_KEY_JKS_DEBUG: ${{ secrets.ANDROID_KEY_JKS_DEBUG }}
+            ANDROID_KEY_JKS_RELEASE: ${{ secrets.ANDROID_KEY_JKS_RELEASE }}
+        run: |
+            echo $ANDROID_KEY_JKS_DEBUG | base64 --decode > ./android/app/signingConfigs/debug.jks
+            echo $ANDROID_KEY_JKS_RELEASE | base64 --decode > ./android/app/signingConfigs/release.jks
+
+      - name: create flavor 
+        run: flutter pub run flutter_flavorizr
+
+      - name: create icon
+        run: flutter pub run flutter_launcher_icons:main
+
+      - name: create flavor 
+        run: flutter pub run flutter_flavorizr
+
+      - flutter build ios
+        run: flutter build ios --release --no-codesign --flavor production
+
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.7.2'
+
+      - uses: maierj/fastlane-action@v2.0.1
+        with:
+          lane: 'archive'
