--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -21,10 +21,9 @@ jobs:
             IOS_GOOGLE_SERVICE_DEVELOPMENT: ${{ secrets.IOS_GOOGLE_SERVICE_DEVELOPMENT }}
             IOS_GOOGLE_SERVICE_PRODUCTION: ${{ secrets.IOS_GOOGLE_SERVICE_PRODUCTION }}
         run: |
-            touch ./firbase/development/google-services.json
-            touch ./firbase/production/google-services.json
-            touch ./firbase/development/GoogleService-Info.plist
-            touch ./firbase/production/GoogleService-Info.plist
+            mkdir firbase
+            mkdir firbase/development
+            mkdir firbase/production
             echo $ANDROID_GOOGLE_SERVICE_DEVELOPMENT | base64 --decode > ./firbase/development/google-services.json
             echo $ANDROID_GOOGLE_SERVICE_PRODUCTION | base64 --decode > ./firbase/production/google-services.json
             echo $IOS_GOOGLE_SERVICE_DEVELOPMENT | base64 --decode > ./firbase/development/GoogleService-Info.plist
