--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -57,7 +57,7 @@ jobs:
         run: flutter pub run flutter_flavorizr
 
       - name: flutter build ios
-        run: flutter build ios --release --no-codesign --flavor production --t lib/main-production.dart
+        run: flutter build ios --release --no-codesign --flavor production -t lib/main-production.dart
 
       - name: setup ruby
         uses: actions/setup-ruby@v1
