--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.6.9'
+          ruby-version: '2.7.2'
 
       - name: install flutter
         uses: subosito/flutter-action@v2
@@ -64,13 +64,15 @@ jobs:
       - name: flutter build ios
         run: flutter build ios --release --no-codesign --flavor production -t lib/main-production.dart
 
-      - name: cd ios
-        run: cd ios
-        
+      - name: export CI
+        run: export CI=1
+
       - name: archive
         uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'archive'
+          subdirectory: 'ios'
+          bundle-install-path: 'vendor/bundle'
 
       - name: upload to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
@@ -78,4 +80,4 @@ jobs:
           appId: com.zwtin.oogiritaizen
           token: ${{ secrets.FIREBASE_TOKEN }}
           group: tester
-          file: ./Runner.ipa
+          file: ios/Runner.ipa
