--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -69,6 +69,8 @@ jobs:
 
       - name: archive
         uses: maierj/fastlane-action@v2.0.1
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
           lane: 'archive'
           subdirectory: 'ios'
