--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -71,6 +71,7 @@ jobs:
         uses: maierj/fastlane-action@v2.0.1
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          MATCH_PASSWORD: ${{ secrets.ITUNES_PASSWORD }}
         with:
           lane: 'archive'
           subdirectory: 'ios'
