app distributionを失敗する原因を出力させたい

--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -114,3 +114,4 @@ jobs:
           token: ${{ secrets.FIREBASE_TOKEN }}
           groups: tester
           file: ios/Runner.ipa
+          debug: true
