--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -98,20 +98,10 @@ jobs:
           name: my-artifact
           path: ios/
 
-      - name: script
-        run: ls -a
-
-      - name: script
-        run: |
-          cd ios/
-          ls -a
-          cd ../
-
       - name: upload to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: com.zwtin.oogiritaizen.dev
+          appId: ${{ secrets.IOS_FIREBASE_APP_ID_DEVELOPMENT }}
           token: ${{ secrets.FIREBASE_TOKEN }}
           groups: tester
           file: ios/Runner.ipa
-          debug: true
