--- a/.github/workflows/app_distribution.yaml
+++ b/.github/workflows/app_distribution.yaml
@@ -1,9 +1,12 @@
 name: app_distribution
 
-on: 
-  push:
-    branches:
-      - github_actions
+on:
+  workflow_dispatch:
+    inputs:
+      buildConfig:
+        required: true
+        description: Build Configuration
+        default: development
 
 jobs:
   build:
@@ -11,6 +14,10 @@ jobs:
     timeout-minutes: 60
 
     steps:
+      - name: check build config
+        if: ${{ github.event.inputs.buildConfig }} != 'development' && ${{ github.event.inputs.buildConfig }} != 'production'
+        run: exit 1
+
       - name: checkout
         uses: actions/checkout@v2
 
@@ -61,19 +68,36 @@ jobs:
       - name: create flavor 
         run: flutter pub run flutter_flavorizr
 
-      - name: flutter build ios
+      - name: flutter build ios development
+        if: ${{ github.event.inputs.buildConfig }} != 'development'
         run: flutter build ios --release --no-codesign --flavor development -t lib/main-development.dart
+
+      - name: flutter build ios production
+        if: ${{ github.event.inputs.buildConfig }} != 'production'
+        run: flutter build ios --release --no-codesign --flavor production -t lib/main-production.dart
 
       - name: export CI
         run: export CI=1
 
-      - name: archive
+      - name: archive development
+        if: ${{ github.event.inputs.buildConfig }} != 'development'
         uses: maierj/fastlane-action@v2.0.1
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           MATCH_PASSWORD: ${{ secrets.ITUNES_PASSWORD }}
         with:
           lane: 'archive_dev'
+          subdirectory: 'ios'
+          bundle-install-path: 'vendor/bundle'
+
+      - name: archive production
+        if: ${{ github.event.inputs.buildConfig }} != 'production'
+        uses: maierj/fastlane-action@v2.0.1
+        env:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          MATCH_PASSWORD: ${{ secrets.ITUNES_PASSWORD }}
+        with:
+          lane: 'archive'
           subdirectory: 'ios'
           bundle-install-path: 'vendor/bundle'
 
@@ -99,9 +123,19 @@ jobs:
           path: ios/
 
       - name: upload to Firebase App Distribution
+        if: ${{ github.event.inputs.buildConfig }} != 'development'
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.IOS_FIREBASE_APP_ID_DEVELOPMENT }}
+          token: ${{ secrets.FIREBASE_TOKEN }}
+          groups: tester
+          file: ios/Runner.ipa
+
+      - name: upload to Firebase App Distribution
+        if: ${{ github.event.inputs.buildConfig }} != 'production'
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{ secrets.IOS_FIREBASE_APP_ID_PRODUCTION }}
           token: ${{ secrets.FIREBASE_TOKEN }}
           groups: tester
           file: ios/Runner.ipa
