--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -164,6 +164,9 @@ flavorizr:
         bundleId: "com.zwtin.oogiritaizen.dev"
         firebase:
           config: "firebase/development/GoogleService-Info.plist"
+        variables:
+          REVERSED_CLIENT_ID:
+            value: "com.googleusercontent.apps.532670940197-3aphicmhdupitfthoq5fu2dmghhdcu8d"
 
     production:
       app:
@@ -177,6 +180,9 @@ flavorizr:
         bundleId: "com.zwtin.oogiritaizen"
         firebase:
           config: "firebase/production/GoogleService-Info.plist"
+        variables:
+          REVERSED_CLIENT_ID:
+            value: "com.googleusercontent.apps.112273983609-62u434tpqqdj3a45t61ivkv4ehrggoj3"
 
   instructions:
     - assets:download
