--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   package_info_plus: ^1.1.0
   photo_view: ^0.12.0
-  image_picker: ^0.8.4+4
+  image_picker: ^0.8.5
   image_cropper: ^1.4.1
   flutter_image_compress: ^1.0.0
   circular_menu: ^1.2.2
